# Market-Trend-Predictor

./: .gitignore  README.md  app.py  hf_requirements.txt  market_impact_training.ipynb  market_impact_training_betterres.ipynb  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hf.yml
app/: streamlit_app.py
reports/: eda_summary.json
