[project]
name = "financial-news-market-impact-finbert"
version = "0.1.0"
description = "Financial news headline market impact prediction with TF-IDF baselines and FinBERT."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
